# options-monitor

./: app.py  funded_convexity.py  main.py  pyproject.toml  simulation.py  sprint_glide.py
methods/: aggressive_compounding.py  bocd.py  fhs.py  kde.py  live_monitor.py  pot.py
