[project]
name = "options-monitor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "colorama>=0.4.6",
    "ib-insync>=0.9.86",
    "matplotlib>=3.10.8",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "scipy>=1.17.0",
    "streamlit>=1.52.2",
    "yfinance>=1.1.0",
]
